instructors/lab-deployments/a-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    name: lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-system
