instructors/lab-deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-c
  namespace: lab
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "lab-c.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab-c
            port:
              number: 443
