instructors/lab-deployments/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-a
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab-a
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-a
    spec:
      containers:
      - name: lab-a
        image: hashicorp/http-echo
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-b
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab-b
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-b
    spec:
      containers:
      - name: lab-b
        image: hashicorp/http-echo
        ports:
        - containerPort: 5678
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: lab-b
  namespace: lab
spec:
  podSelector:
    matchLabels:
      app: lab-b
  ingress: []
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-c
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab-c
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-c
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 443
          volumeMounts:
            - name: lab-c-conf
              mountPath: /etc/nginx
      volumes:
        - name: lab-c-conf
          configMap:
            name: lab-c-conf
          items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-d
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab-d
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-d
    spec:
      containers:
      - name: lab-d
        image: hashicorp/http-echo
        ports:
        - containerPort: 80
